# GMGPolar

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  ErrorDirBC.vtu  ExtrapolatedSmoother1.txt  ExtrapolatedSmoother2.txt  GiveDepTasking.txt  GiveDepTaskingNoShared.txt  GiveForLoop.txt  GiveMutexTasking.txt  GiveMutexTasking2.txt  Makefile  Makefile.inc  OLDmatrixA.cpp  R2.txt  README.md  Solution.vtu  Solution2.vtu  Solution3.vtu  SolutionMGC.vtu  _angles.txt  _angles_coarse.txt  _radii.txt  _radii_coarse.txt  batch.sh_paper  compile.sh  ctest.sh  errorMGC.vtu  help.sh  memory.py  output_table.txt  plot.py  pull_request_template.md  residualTake.cpp  residualTake2.cpp  residual_debug.cpp  result_cusolverSp.txt  run.sh  sbatch.sh  (+10 more)
src/: CMakeLists.txt  RHS.cpp  batch_speed.cu  build_bi_aniso_rdir_phiper.cpp  build_fd9star_anisotr_scaled.cpp  build_rhs_apply_op.cpp  conjugate_gradient.cpp  convergence_order.cpp  create_grid_polar.cpp  cuda.cu  czarny_benchmark.cpp  debug.cpp  debug.cu  define_coarse_nodes.cpp  direct_solve.cpp  gmgpolar.cpp  gyro.cpp  level.cpp  main.cpp  main2.cpp  multigrid_iter.cpp  paper_convergence_order.cpp  paper_strong_scaling.cpp  paper_weak_scaling.cpp  polar_multigrid.cpp  prolongation.cpp  shafranov_benchmark.cpp  smoother.cpp  smoother0.cpp  strong_scaling.cpp  test_solver.cu  weak_scaling.cpp  write_arrays_to_file.cpp_archive
src/CoarseSolver/: buildMatrix.cpp  coarseSolver.cpp  initializeMumps.cpp  matrixStencil.cpp  matrixSymmetryShift.cpp
src/ConfigParser/: config_parser.cpp  select_solver_circular.cpp  select_solver_culham.cpp  select_solver_czarny.cpp  select_solver_shafranov.cpp  select_test_case.cpp
src/DirectSolver/: applySymmetryShift.cpp  buildMatrix.cpp  buildSolverMatrix.cpp  directSolver.cpp  initializeMumps.cpp  matrixStencil.cpp  solveMumps.cpp  subtractSymmetryShift.cpp
src/ExtrapolatedSmoother/: buildAscMatrices.cpp  buildMatrix.cpp  extrapolatedSmoother.cpp  initializeMumps.cpp  matrixStencil.cpp  smoother.cpp  smootherSolver.cpp  smootherStencil.cpp
src/GMGPolar/: build_rhs.cpp  build_rhs.cu  build_rhs_f.cpp  compute_exact_error.cu  extrapolated_residual.cu  gmgpolar.cpp  gmgpolar_initializeLevels.cpp  gmgpolar_parser.cpp  level_interpolation.cpp  parser.cpp  pcg.cpp  select_exact_function_class.cpp  select_test_case.cpp  setup.cpp  solver.cpp  solver.cu  writeToVTK.cpp
src/InputFunctions/: CMakeLists.txt  boundaryConditions.cpp  densityProfileCoefficients.cpp  domainGeometry.cpp  domain_geometry.cpp  exactSolution.cpp  sourceTerm.cpp  systemParameters.cpp
src/Interpolation/: extrapolated_prolongation.cpp  extrapolated_prolongation.cu  extrapolated_restriction.cpp  extrapolated_restriction.cu  fmg_interpolation.cpp  fmg_interpolation.cu  injection.cpp  injection.cu  interpolation.cpp  prolongation.cpp  prolongation.cu  restriction.cpp  restriction.cu  restrictionGive.cpp  restrictionTake.cpp
src/Level/: level.cpp  level.cu  levelCache.cpp  levelCache.cu
src/Operator/: build_symmetric_system.cpp  build_system.cpp  matrixA.cpp  operator.cpp  smoother.cpp  stencil.cpp
src/PolarGrid/: CMakeLists.txt  anisotropic_division.cpp  load_write_grid.cpp  multiindex.cpp  point.cpp  polargrid.cpp  polargrid.cu
src/Residual/: residual.cpp  residual_debug.cpp
src/Smoother/: buildMatrix.cpp  initializeMumps.cpp  matrixStencil.cpp  smoother.cpp  smootherSolver.cpp
src/Stencil/: stencil.cpp
src/SystemOperator/: system_operator.cpp
src/TaskDistribution/: TaskDistribution.cpp  taskDistribution.cpp
src/test_cases/: CartesianR2GyroSonnendruckerCircular.cpp  CartesianR2GyroSonnendruckerShafranov.cpp  CartesianR2GyroSonnendruckerTriangular.cpp  CartesianR2GyroZoniCircular.cpp  CartesianR2GyroZoniShafranov.cpp  CartesianR2GyroZoniShiftedCircular.cpp  CartesianR2GyroZoniShiftedShafranov.cpp  CartesianR2GyroZoniShiftedTriangular.cpp  CartesianR2GyroZoniTriangular.cpp  CartesianR2PoissonCircular.cpp  CartesianR2PoissonShafranov.cpp  CartesianR2PoissonTriangular.cpp  CartesianR2SonnendruckerCircular.cpp  CartesianR2SonnendruckerShafranov.cpp  CartesianR2SonnendruckerTriangular.cpp  CartesianR2ZoniCircular.cpp  CartesianR2ZoniShafranov.cpp  CartesianR2ZoniShiftedCircular.cpp  CartesianR2ZoniShiftedShafranov.cpp  CartesianR2ZoniShiftedTriangular.cpp  CartesianR2ZoniTriangular.cpp  CartesianR6GyroSonnendruckerCircular.cpp  CartesianR6GyroSonnendruckerShafranov.cpp  CartesianR6GyroSonnendruckerTriangular.cpp  CartesianR6GyroZoniCircular.cpp  CartesianR6GyroZoniShafranov.cpp  CartesianR6GyroZoniShiftedCircular.cpp  CartesianR6GyroZoniShiftedShafranov.cpp  CartesianR6GyroZoniShiftedTriangular.cpp  CartesianR6GyroZoniTriangular.cpp  CartesianR6PoissonCircular.cpp  CartesianR6PoissonShafranov.cpp  CartesianR6PoissonTriangular.cpp  CartesianR6SonnendruckerCircular.cpp  CartesianR6SonnendruckerShafranov.cpp  CartesianR6SonnendruckerTriangular.cpp  CartesianR6ZoniCircular.cpp  CartesianR6ZoniShafranov.cpp  CartesianR6ZoniShiftedCircular.cpp  CartesianR6ZoniShiftedShafranov.cpp  (+29 more)
tests/: CMakeLists.txt  comparetest.cpp  gmgpolar_tests.cpp  gyro_test.cpp  level_test.cpp  mockgrid.cpp  mockgrid.h  operations.cpp  polargrid.cpp  prolongation.cpp  restriction.cpp  smoother_test.cpp  test_grid.cpp  test_operator.cpp  test_prolongation.cpp  test_restriction.cpp  test_smoother.cpp  test_tools.h  testoperator.cpp  vector.cpp
tests/ConfigParser/: config_parser.cpp
tests/DirectSolver/: directSolver.cpp  directSolverNoMumps.cpp  directSolver_coo_mumps.cpp  directSolver_csr_lu.cpp  direct_solver.cpp
tests/ExtrapolatedSmoother/: extrapolated_smoother.cpp  extrapolated_smoother.cu
tests/GMGPolar/: cartesianR2.cpp  convergence_order.cpp  convergence_tests.cpp  cycle_types.cpp  extrapolation.cpp  gmgpolar.cpp  multigrid_iterations.cpp  non_uniform.cpp  pcg_tests.cpp  polarR6.cpp  solve_tests.cpp  stencil_distribution.cpp  verbose_test_instance.cpp
tests/Interpolation/: extrapolated_prolongation.cpp  extrapolated_prolongation.cu  extrapolated_restriction.cpp  extrapolated_restriction.cu  fmg_interpolation.cu  injection.cu  prolongation.cpp  (+3 more)
(+2110 files in other folders)
